deployment/Kubernetes/overlays/general/local/prototype/prototype-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prototype
spec:
  template:
    spec:
      containers:
        - name: ampersand-prototype
          image: ampersand-prototype:latest
          imagePullPolicy: IfNotPresent
